--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			onclick = 'base2base(
 
 				inputIntegerString = document.getElementById("inputInteger").value, 
-				inputBaseString = document.getElementById("inputIntegerBase").value,
+				inputIntegerBaseString = document.getElementById("inputIntegerBase").value,
 				outputBaseString = document.getElementById("outputIntegerBase").value
 
 			)'
