--- a/index.html
+++ b/index.html
@@ -38,8 +38,20 @@
 
 		<br>
 		<h2> Output </h2>
-		<div> <p class = 'resultField', id = 'resultField1'> ... </p> </div>
-		<div> <button onclick = 'copyToClipboard(document.getElementById("resultField1"))'> Copy To Clipboard </button> </div>
+		<p class = 'resultField', id = 'resultField1'> ... </p>
+		<button class = 'copyToClipboard', onclick = 'copyToClipboard(document.getElementById("resultField1"))'> 
+
+			<img 
+				
+				src = 'images/index/copy-icon.png',
+				width = '30px',
+				height = '30px'
+				
+			>
+			
+			<b> Copy To Clipboard  </b>
+			
+		</button>
 
 	</body>
 </html>
