--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				class = 'convertButton', 
 				onclick = 'baseToBase(
 	
-					inputIntegerString = document.getElementById("inputInteger").value, 
-					inputIntegerBaseString = document.getElementById("inputIntegerBase").value,
-					outputBaseString = document.getElementById("outputIntegerBase").value
+					input = document.getElementById("inputInteger").value, 
+					inputBase = document.getElementById("inputIntegerBase").value,
+					outputBase = document.getElementById("outputIntegerBase").value
 	
 				)'
 	
