--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 			
 			<br>
 			
-			<h2 class = 'subTitle'> To Base </h2>
-			<input class = 'inputField', id = 'outputBaseField', placeholder = 'To Base'>
-			
 			<br>
 			
 			<button
@@ -42,8 +39,10 @@
 			</button>
 	
 			<br>
+			
 			<h2 class = 'subTitle', id = 'outputTitle'> Output </h2>
 			<p class = 'outputField', id = 'outputField'> ... </p>
+			<input class = 'inputField', id = 'outputBaseField', placeholder = 'Base'>
 			<button class = 'copyToClipboard', onclick = 'copyToClipboard(document.getElementById("outputField"))'> <b> COPY TO CLIPBOARD  </b> </button>
 
 		</div>
